--- a/src/View/components/Comments/Comments.module.css
+++ b/src/View/components/Comments/Comments.module.css
@@ -13,6 +13,12 @@
   padding: 4px 8px;
   border-radius: 8px;
   margin-bottom: 4px;
+
+  transition: all 0.4s;
+}
+
+.authorComment:hover {
+  transform: scale(1.2) rotate(2deg);
 }
 
 .authorAva {
@@ -47,6 +53,12 @@
   background-color: rgb(244, 218, 185);
   padding: 4px;
   border-radius: 8px;
+
+  transition: all 0.4s;
+}
+
+.comment:hover {
+  transform: scale(1.13) rotate(2deg);
 }
 
 .likePost {
