--- a/src/View/components/Modal/Modal.css
+++ b/src/View/components/Modal/Modal.css
@@ -12,19 +12,14 @@
 }
 
 .modal_wrapper {
-  width: 300px;
   background-color: #ffff;
   border-radius: 12px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 0;
+  padding: 20px;
   position: relative;
-}
-
-.modal_children {
-  width: 90%;
 }
 
 .modalHeader {
