--- a/src/View/components/Modal/ProfileChildren/ProfileChildren.module.css
+++ b/src/View/components/Modal/ProfileChildren/ProfileChildren.module.css
@@ -1,9 +1,9 @@
-.wrapper {
-  margin-top: 14px;
+.profileInfo {
   display: flex;
   align-items: flex-start;
   justify-content: center;
   gap: 12px;
+  margin: 14px 0;
 }
 
 .info {
@@ -48,4 +48,62 @@
   background: none;
   border: none;
   cursor: pointer;
+}
+
+.changeProfileVue {
+  position: absolute;
+  width: 90px;
+  background-color: #ffffff;
+  border-radius: 8px;
+  box-shadow: 4px 4px 12px rgba(94, 94, 94, 0.5);
+  left: 10px;
+  top: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 4px;
+  padding: 6px;
+}
+
+.changeAvatarBtn {
+  background: none;
+  border: none;
+  width: 23px;
+  height: 23px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.changeAvatar {
+  transition: all 0.5s;
+}
+
+.changeAvatar:hover {
+  transform: scale(1.8);
+}
+
+.changeAvatar:active {
+  transform: scale(2.2);
+  transition: all 0.2s;
+}
+
+.profileSaveBtn {
+  background: none;
+  cursor: pointer;
+  border: none;
+  border-bottom: 1px solid black;
+  border-top: 1px solid black;
+  letter-spacing: 4px;
+  opacity: 0.3;
+  padding: 4px 14px;
+  font-size: 16px;
+
+  transition: all 0.5s;
+}
+
+.profileSaveBtn:hover {
+  background: rgb(208, 252, 201);
+}
+
+.profileSaveBtn:active {
+  background: rgb(207, 207, 207);
 }
