--- a/src/View/components/Modal/AddPostChildren/AddPostChildren.module.css
+++ b/src/View/components/Modal/AddPostChildren/AddPostChildren.module.css
@@ -13,6 +13,7 @@
   border: 1px solid rgb(220, 220, 220);
   background-color: rgb(246, 246, 246);
   border-radius: 16px;
+  width: 100%;
 }
 
 .modalCloseBtn {
